--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.profile.MainActivity">
+    tools:context=".ui.profile.ProfileActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
