--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <dimen name="font_normal_16">16sp</dimen>
     <dimen name="font_small_12">12sp</dimen>
 
+    <dimen name="spacing_maximum_72">72dp</dimen>
     <dimen name="spacing_huge_32">32dp</dimen>
     <dimen name="spacing_large_24">24dp</dimen>
     <dimen name="spacing_normal_16">16dp</dimen>
@@ -13,4 +14,8 @@
 
     <dimen name="btn_round_size_40">40dp</dimen>
     <dimen name="avatar_round_size">112dp</dimen>
+    <dimen name="item_size">72dp</dimen>
+    <dimen name="avatar_item_size">40dp</dimen>
+    <dimen name="counter_size">20dp</dimen>
+    <dimen name="icon_size">24dp</dimen>
 </resources>
